update-manager (1:0.87.20) hardy; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - fix incorrect _() call (thanks to Timo Jyrinki)
  * DistUpgrade/mirrors.cfg:
    - fix ports.ubuntu.com mirror URI (LP: #215346)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Apr 2008 21:37:49 +0200

update-manager (1:0.87.19) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - only try to upgrade held-back packages in the 
      edgyQuirks handler if they are actually upgradable 
      (thanks to Lamont Jones and James Troup)
  * po/fi.po
    - unfuzzy string (thanks to Timo Jyrinki)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Apr 2008 20:51:05 +0200

update-manager (1:0.87.18) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - remove mail-notificaton, gnome-translate from hardy 
      quirks list (LP: #215690)
  * UpdateManager/DistUpgradeFetcher.py:
    - use sensible gksu prompt when asking for release
      upgrade (LP: #161888)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Apr 2008 21:44:43 +0200

update-manager (1:0.87.17) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - when run from a CDROM upgrade on dapper, ensure to
      fetch the right files on tryUpdateSelf() (#215673)
    - ensure that language-support-$lang packages get
      upgraded if they are installed
  * UpdateManager/Core/MetaRelease.py:
    - support forceLTS option (#215673)
  * DistUpgrade/DistUpgradeView.py:
    - work around gutsy->hardy nvidia-glx uprade problem
      when libqt-perl is used (#205079)
  * DistUpgrade/ReleaseAnnouncement:
    - updated for RC

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Apr 2008 22:34:06 +0200

update-manager (1:0.87.16) hardy; urgency=low

  * DistUpgrade/DistUpgradeViewText.py:
    - show prompt again after showing details 
    - use pager for long change entries
    (thanks to James Troup)
    - fix text wrap to not break lines on "-" (e.g. in package 
      names)